# fibz

./: .env.ci  .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AGENTS_GEMINI.md  CI.md  CODEX_PROMPT.md
fibz-python-scaffold-v0.5.0/: README.md
fibz-python-scaffold-v0.5.0/docs/: CODEX_PROMPT.md
fibz-python-scaffold-v0.5.0/fibz_bot/: config.py
fibz-python-scaffold-v0.5.0/fibz_bot/bot/: main.py
fibz-python-scaffold-v0.5.0/fibz_bot/ingest/: images.py  pdf_extract.py
fibz-python-scaffold-v0.5.0/fibz_bot/llm/: tools.py
fibz-python-scaffold-v0.5.0/scripts/: run_bot.py
fibz-python-scaffold-v0.5.0/tests/: test_consent.py  test_metrics.py  test_policy_precedence.py  test_precedence.py
fibz_bot/: config.py
fibz_bot/bot/: main.py
fibz_bot/ingest/: attachments.py  audio.py  files.py  images.py  pdf_extract.py
fibz_bot/llm/: agent.py  builtin_tools.py  cache.py  prompts.py  revision.py  router.py  tools.py
fibz_bot/memory/: store.py
fibz_bot/policy/: consent.py  injector.py  precedence.py
fibz_bot/storage/: gcs.py
fibz_bot/utils/: backoff.py  gcs.py  http.py  logging.py  metrics.py  overflow.py
fibz_bot/web/: search.py
scripts/: bootstrap.sh  ci_local.sh  clean.sh  format.sh  run_bot.py  run_bot.sh  test.sh  typecheck.sh
tests/: conftest.py  test_backoff.py  test_bot_self_knowledge.py  test_consent.py  test_consent_classifier.py  test_entities.py  test_metrics.py  test_overflow.py  test_policy_precedence.py  test_precedence.py
(+3 files in other folders)
